fix: z-index in mega menu popover

--- a/src/components/UI/molecules/MegaMenuPopover/MegaMenuPopover.module.scss
+++ b/src/components/UI/molecules/MegaMenuPopover/MegaMenuPopover.module.scss
@@ -40,7 +40,7 @@
     overflow: hidden;
     width: 100%;
     cursor: pointer;
-
+    z-index: 1;
     body {
       overflow: hidden;
     }
@@ -54,5 +54,6 @@
     width: 100%;
     max-height: 60vh;
     overflow: auto;
+    z-index: 2;
   }
 }
